--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,40 @@
+body {
+  max-width: 100%;
+  margin: 0;
+}
 
+.container {
+  margin-right: 15%;
+  margin-left: 15%;
+}
 
 
 /* ==================== NAV BAR ====================  */
 
+
 .slack-logo {
-  width: 20%;
+  width: 25%;
+  float: left;
 }
 
 .slack-logo img {
   box-sizing: border-box;
+  width: 100%;
+}
+
+.menu-icon {
+  width: 13%;
+  float: right;
+}
+
+.menu-icon img {
+  box-sizing: border-box;
+  width: 100%;
 }
 
 
-.menu-icon > div {
-    width: 5%;
-    height: 5px;
-    background-color: grey;
-    margin: 6px 0;
-}
+/* ==================== HEADER ====================  */
 
+header {
+  clear: both;
+}
