--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,11 @@ body {
 /* ==================== NAV BAR ====================  */
 
 nav {
-  margin-top: 8%;
+  margin-top: 5%;
 }
 
 .slack-logo {
-  width: 25%;
+  width: 30%;
   float: left;
 }
 
@@ -26,7 +26,7 @@ nav {
 }
 
 .menu-icon {
-  width: 14%;
+  width: 15%;
   float: right;
 }
 
@@ -40,4 +40,31 @@ nav {
 
 header {
   clear: both;
+  padding-top: 8%;
+}
+
+header h1{
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: normal;
+  font-size: 35px;
+}
+
+header p {
+  font-size: 20px;
+}
+
+
+.download-button button{
+  border-radius: 7px;
+  background-color: #3F46AD;
+  color: white;
+  font-size: 15px;
+  padding: 15px;
+}
+
+.home-img {
+  box-sizing: border-box;
+  width: 100%;
+  padding-top: 13%;
 }
