--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ body {
   margin-left: 10%;
 }
 
+h1, h2, h3, h4 {
+  color: #323648;
+}
+
 
 /* ==================== NAV BAR ====================  */
 
@@ -52,6 +56,7 @@ header h1{
 
 header p {
   font-size: 20px;
+  color: #5B5E6D;
 }
 
 
@@ -83,6 +88,10 @@ header p {
 
 .features {
   padding-bottom: 15%;
+}
+
+.features p {
+  color: #5B5E6D;
 }
 
 .use-cases {
@@ -117,4 +126,22 @@ header p {
 .use-cases {
   padding-top: 15%;
   padding-bottom: 15%;
+}
+
+.use-cases p {
+  color: #5B5E6D;
+}
+
+
+/* ==================== STORIES SECTION ====================  */
+
+.stories > article {
+  box-shadow: 3px;
+}
+
+.stories > article img {
+  box-sizing: border-box;
+  width: 100%;
+  padding-top: 5%;
+  padding-bottom: 10%;
 }
