--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   max-width: 100%;
   margin: 0;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 .container {
@@ -135,7 +136,9 @@ header p {
 
 /* ==================== STORIES SECTION ====================  */
 
-.stories > article {
+.stories article {
+  /* border-style: solid; */
+  border-width: 0.1px grey;
   box-shadow: 3px;
 }
 
@@ -144,4 +147,9 @@ header p {
   width: 100%;
   padding-top: 5%;
   padding-bottom: 10%;
+}
+
+.stories-menu {
+  width: 12%;
+  float: right;
 }
