--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,8 @@ h1, h2, h3, h4 {
 nav {
   margin-top: 0%;
   padding-top: 10%;
+  margin-right: 10%;
+  margin-left: 10%;
   position: fixed;
   background: white;
   box-sizing: border-box;
